# HLSL2ALL

./: .gitignore  .gitmodules  CMakeLists.txt  make_dependencies.bat  make_dependencies.sh  make_dirs.bat  make_dirs.sh  make_glslang_win32_d.bat  make_glslang_x64_d.bat  make_spirv_cross_win32_d.bat  make_spirv_cross_x64_d.bat
HLSL2ALL.xcodeproj/: project.pbxproj
include/: SourceToSpirv.h  SpirvToSource.h
include/HLSL2ALL/: SpirvToSource.h
source/: SourceToSpirv.cpp  SpirvToSource.cpp
tests/: main.cpp
